--- a/quad_controller/CMakeLists.txt
+++ b/quad_controller/CMakeLists.txt
@@ -140,7 +140,7 @@ catkin_package(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/quad_controller_node.cpp)
+add_executable(${PROJECT_NAME}_PIDController_node src/pid_controller.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
