--- a/quad_controller/CMakeLists.txt
+++ b/quad_controller/CMakeLists.txt
@@ -125,12 +125,12 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(~/catkin_ws/src/controls/quad_controller/lib/)
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/quad_controller.cpp
+#add_library(PIDController, /home/sean/catkin_ws/src/controls/quad_controller/lib/pid_controller.cpp)
 # )
+add_library(PID_controller lib/pid_controller.cpp)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -140,7 +140,9 @@ catkin_package(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_PIDController_node src/pid_controller.cpp)
+#add_executable(${PROJECT_NAME}_PIDController_node src/pid_controller.cpp)
+add_executable(${PROJECT_NAME}_hover_controller_node src/hover_controller_node.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -153,10 +155,10 @@ add_executable(${PROJECT_NAME}_PIDController_node src/pid_controller.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
+#target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-
+target_link_libraries(${PROJECT_NAME}_hover_controller_node PID_controller)
 #############
 ## Install ##
 #############
